--- a/services/outreach-service/Dockerfile
+++ b/services/outreach-service/Dockerfile
@@ -1,10 +1,12 @@
 FROM gradle:8.5-jdk17 AS builder
 WORKDIR /app
-COPY . .
+COPY services/outreach-service/ .
+COPY proto/ src/main/proto/
+ENV DOCKER_BUILD=true
 RUN gradle build --no-daemon
 
 FROM openjdk:17-slim
 WORKDIR /app
 COPY --from=builder /app/build/libs/*-all.jar app.jar
-EXPOSE 50051
+EXPOSE 50053
 ENTRYPOINT ["java", "-jar", "app.jar"]
