--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,30 @@ services:
   # ---------- Shared datastores ----------
   dynamodb:
     image: amazon/dynamodb-local
-    container_name: dynamodb
     ports: [ "8000:8000" ]
+    healthcheck:
+      test: [ "CMD-SHELL", "echo > /dev/tcp/localhost/8000" ]
+      interval: 3s
+      timeout: 2s
+      retries: 10
 
   mysql:
-    image: mysql:8.3
+    image: mysql:8.0.36
     container_name: mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root            # admin
-      MYSQL_DATABASE:  leadreach
-      MYSQL_USER:      root
-      MYSQL_PASSWORD:  123456
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: leadreach
+      MYSQL_USER: lead
+      MYSQL_PASSWORD: leadpw
     ports: [ "3306:3306" ]
+    volumes:
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   # ---------- Micro-services ----------
   lead-service:
@@ -25,23 +36,29 @@ services:
     environment:
       # JDBC settings picked up by Micronaut
       - JDBC_URL=jdbc:mysql://mysql:3306/leadreach
-      - JDBC_USER=root
-      - JDBC_PASSWORD=123456
-    depends_on: [ mysql ]
+      - JDBC_USER=lead
+      - JDBC_PASSWORD=leadpw
+    depends_on:
+      mysql:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 50051 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: on-failure
 
   enrichment-service:
     build:
       context: .
       dockerfile: ./services/enrichment-service/Dockerfile
     ports: [ "50052:50052" ]
-    depends_on: [ dynamodb ]       # only if it still reads checkpoints; otherwise drop
 
   outreach-service:
     build:
       context: .
       dockerfile: ./services/outreach-service/Dockerfile
     ports: [ "50053:50053" ]
-    depends_on: [ dynamodb ]       # remove if not needed
 
   orchestrator:
     build:
@@ -51,11 +68,21 @@ services:
     environment:
       - AWS_REGION=local
       - DYNAMO_ENDPOINT=http://dynamodb:8000
+      - AWS_ACCESS_KEY_ID=dummy
+      - AWS_SECRET_ACCESS_KEY=dummy
       - LEAD_SERVICE_HOST=lead-service:50051
       - ENRICH_SERVICE_HOST=enrichment-service:50052
       - OUTREACH_SERVICE_HOST=outreach-service:50053
     depends_on:
-      - dynamodb
-      - lead-service
-      - enrichment-service
-      - outreach-service
+      dynamodb:
+        condition: service_healthy
+      lead-service:
+        condition: service_healthy
+      enrichment-service:
+        condition: service_started
+      outreach-service:
+        condition: service_started
+    restart: on-failure
+
+volumes:
+  mysql_data:
