--- a/services/orchestrator/build.gradle
+++ b/services/orchestrator/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     
     compileOnly("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
+    runtimeOnly("org.yaml:snakeyaml")
     testImplementation("io.micronaut:micronaut-http-client")
 }
 
