--- a/services/lead-service/Dockerfile
+++ b/services/lead-service/Dockerfile
@@ -8,5 +8,9 @@ RUN gradle build --no-daemon
 FROM openjdk:17-slim
 WORKDIR /app
 COPY --from=builder /app/build/libs/*-all.jar app.jar
-EXPOSE 50051
+
+# Install netcat for health checks
+RUN apt-get update && apt-get install -y netcat-openbsd && rm -rf /var/lib/apt/lists/*
+
+EXPOSE 50055
 ENTRYPOINT ["java", "-jar", "app.jar"]
