--- a/services/lead-service/build.gradle
+++ b/services/lead-service/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("javax.annotation:javax.annotation-api:1.3.2")
     
+    // gRPC dependencies
+    implementation("io.grpc:grpc-netty:1.62.2")
+    implementation("io.grpc:grpc-protobuf:1.62.2")
+    implementation("io.grpc:grpc-stub:1.62.2")
+    implementation("io.grpc:grpc-services:1.62.2")  // For reflection service
+    
     // Database dependencies
     implementation("io.micronaut.data:micronaut-data-jpa")
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
