--- a/services/orchestrator/Dockerfile
+++ b/services/orchestrator/Dockerfile
@@ -8,5 +8,5 @@ RUN gradle build --no-daemon
 FROM openjdk:17-slim
 WORKDIR /app
 COPY --from=builder /app/build/libs/*-all.jar app.jar
-EXPOSE 50054
+EXPOSE 50051 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
