--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,20 +32,22 @@ services:
     build:
       context: .
       dockerfile: ./services/lead-service/Dockerfile
-    ports: [ "50051:50051" ]
+    ports: [ "50055:50055" ]
     environment:
       # JDBC settings picked up by Micronaut
       - JDBC_URL=jdbc:mysql://mysql:3306/leadreach
       - JDBC_USER=lead
       - JDBC_PASSWORD=leadpw
+      - GRPC_PORT=50055
     depends_on:
       mysql:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 50051 || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD-SHELL", "nc -z localhost 50055 || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
     restart: on-failure
 
   enrichment-service:
@@ -53,26 +55,34 @@ services:
       context: .
       dockerfile: ./services/enrichment-service/Dockerfile
     ports: [ "50052:50052" ]
+    environment:
+      - GRPC_PORT=50052
 
   outreach-service:
     build:
       context: .
       dockerfile: ./services/outreach-service/Dockerfile
     ports: [ "50053:50053" ]
+    environment:
+      - GRPC_PORT=50053
 
   orchestrator:
     build:
       context: .
       dockerfile: ./services/orchestrator/Dockerfile
-    ports: [ "50054:50054" ]
+    ports: [ "50051:50051", "8080:8080" ]
     environment:
       - AWS_REGION=local
       - DYNAMO_ENDPOINT=http://dynamodb:8000
       - AWS_ACCESS_KEY_ID=dummy
       - AWS_SECRET_ACCESS_KEY=dummy
-      - LEAD_SERVICE_HOST=lead-service:50051
-      - ENRICH_SERVICE_HOST=enrichment-service:50052
-      - OUTREACH_SERVICE_HOST=outreach-service:50053
+      - GRPC_PORT=50051
+      - LEAD_SERVICE_HOST=lead-service
+      - LEAD_SERVICE_PORT=50055
+      - ENRICHMENT_SERVICE_HOST=enrichment-service
+      - ENRICHMENT_SERVICE_PORT=50052
+      - OUTREACH_SERVICE_HOST=outreach-service
+      - OUTREACH_SERVICE_PORT=50053
     depends_on:
       dynamodb:
         condition: service_healthy
