--- a/services/lead-service/build.gradle
+++ b/services/lead-service/build.gradle
@@ -19,10 +19,25 @@ dependencies {
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("javax.annotation:javax.annotation-api:1.3.2")
     
+    // gRPC dependencies
+    implementation("io.grpc:grpc-netty:1.62.2")
+    implementation("io.grpc:grpc-protobuf:1.62.2")
+    implementation("io.grpc:grpc-stub:1.62.2")
+    implementation("io.grpc:grpc-services:1.62.2")  // For reflection service
+    
     // Database dependencies
     implementation("io.micronaut.data:micronaut-data-jpa")
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
     implementation("mysql:mysql-connector-java:8.0.33")
+    
+    // JDBI dependencies
+    implementation("org.jdbi:jdbi3-core:3.41.3")
+    implementation("org.jdbi:jdbi3-sqlobject:3.41.3")
+    implementation("org.jdbi:jdbi3-json:3.41.3")
+    
+    // Lombok
+    compileOnly("org.projectlombok:lombok:1.18.30")
+    annotationProcessor("org.projectlombok:lombok:1.18.30")
 
     // Add Flyway with MySQL 8.0 support
     implementation("io.micronaut.flyway:micronaut-flyway")
