--- a/services/outreach-service/build.gradle
+++ b/services/outreach-service/build.gradle
@@ -18,8 +18,15 @@ dependencies {
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("javax.annotation:javax.annotation-api:1.3.2")
     
+    // gRPC dependencies
+    implementation("io.grpc:grpc-netty:1.62.2")
+    implementation("io.grpc:grpc-protobuf:1.62.2")
+    implementation("io.grpc:grpc-stub:1.62.2")
+    implementation("io.grpc:grpc-services:1.62.2")  // For reflection service
+    
     compileOnly("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
+    runtimeOnly("org.yaml:snakeyaml")
     testImplementation("io.micronaut:micronaut-http-client")
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:testcontainers")
